Last visited products

--- a/templates/Front/Content/Default/index.html.twig
+++ b/templates/Front/Content/Default/index.html.twig
@@ -32,6 +32,8 @@
 
     {{ render(controller('App\\Controller\\Front\\CategoryController:topAction')) }}
 
+    {{ render(controller('App\\Controller\\Front\\LastVisitedProductController:showProductList')) }}
+
     {% if topProducts is not empty %}
         <div class="web__line">
             <div class="web__container">
